--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -97,106 +97,110 @@
 {% block content %}
 <header>
     <div class="logo">
-        Quicken Blog
+        AVG Blog
     </div>        
 </header>
         
   <div class="container" style="background-color: #fefefe; padding: 1.5em; border: 1px solid #ccc; margin-bottom: 2em;">
 
-    <h1>How to Install, Download, and Reinstall Quicken on a New Computer: Step-by-Step Guide via Quicken.com</h1>
+    <h1>🛡️ AVG Internet Security & AVG Ultimate: Safe Full Download Options, Activation Steps, and How to Install AVG on Another Computer</h1>
 
-<p>Installing or reinstalling Quicken on a new computer can feel complicated, especially if you’ve already purchased the software or switched devices. Whether you are moving to Windows 10, Windows 11, or simply setting up Quicken Classic for the first time, this guide will walk you through everything—from downloading to signing in and restoring your data.</p>
+    <p>Protecting your PC is crucial in today’s digital world, and AVG offers robust antivirus solutions like <strong>AVG Internet Security</strong> and <strong>AVG Ultimate</strong>. Whether you are a Windows 10 or Windows 11 user, this guide will help you safely download, install, and activate AVG products on your device.</p>
 
-<h2>1. Understanding Quicken Installation on a New Computer</h2>
-<p>When you move to a new device, you don’t need to buy Quicken again. You can use your existing subscription to <strong>install Quicken on this computer</strong> or <strong>reinstall Quicken on new computer</strong> setups. The process begins by signing in to your account at Quicken.com and downloading the correct version.</p>
-<p>If you already own Quicken, you’ll need to use your <strong>Quicken sign in my account</strong> credentials to access your <strong>quicken download already purchased</strong> files.</p>
+    <h2>💾 Downloading AVG Internet Security and AVG Ultimate</h2>
 
-<h2>2. Preparing to Install Quicken on This Computer</h2>
-<p>Before downloading, ensure you have the following:</p>
-<ul>
-    <li>A stable internet connection</li>
-    <li>Your Quicken ID and password</li>
-    <li>A valid subscription (if your plan hasn’t expired)</li>
-    <li>A backup of your Quicken data file</li>
-</ul>
-<p>If your subscription has ended, you can still <strong>reinstall Quicken after subscription expired</strong> or <strong>reinstall Quicken after membership expired</strong>, but you’ll be limited to offline access.</p>
+    <h3>1. Download AVG Internet Security</h3>
+    <p>To <strong>download AVG Internet Security</strong>, ensure you are downloading it from official sources. You can perform a safe <strong>AVG Internet Security full download</strong> suitable for your system. Options include:</p>
+    <ul>
+        <li>AVG Internet Security Windows 10</li>
+        <li>AVG Internet Security 64-bit download</li>
+        <li>AVG Internet Security download for Windows 11</li>
+    </ul>
+    <p>You can also <strong>download AVG antivirus for Windows 11</strong> or <strong>AVG free Internet security download</strong> if you want a trial version.</p>
 
-<h2>3. Step-by-Step Guide to Download Quicken from Quicken.com</h2>
+    <h3>2. Download AVG Ultimate</h3>
+    <p>For users seeking comprehensive protection, <strong>AVG Ultimate download paid version</strong> offers additional features such as VPN and PC optimization. Use the <strong>AVG installer download</strong> to get started with AVG Ultimate.</p>
 
-<h3>Step 1: Go to the Official Quicken Website</h3>
-<p>Visit the official Quicken homepage. Navigate to the <strong>“Sign In”</strong> section and select <strong>“My Account.”</strong> Enter your Quicken ID and password to access your account.</p>
+    <h2>⚙️ Installing AVG on Your Computer</h2>
 
-<h3>Step 2: Access Your Download</h3>
-<p>Once signed in, locate your product under your purchase history. Here, you’ll find the <strong>quicken download already purchased</strong> option.</p>
-<p>If it’s not visible, check the “Downloads” or “Order History” sections. Sometimes, users report issues such as <strong>quicken download already purchased but not showing</strong> or <strong>quicken download already purchased but not working</strong>—usually resolved by refreshing the page or contacting <strong>quicken download already purchased help</strong> support.</p>
+    <h3>1. Install AVG Internet Security</h3>
+    <ol>
+        <li>Open the <strong>AVG installer</strong> you downloaded.</li>
+        <li>Choose the location where you want to <strong>install AVG Internet Security download</strong>.</li>
+        <li>Follow on-screen instructions to complete the installation.</li>
+    </ol>
+    <p>Once installed, you can <strong>open AVG Internet Security</strong> to access its full features.</p>
 
-<h3>Step 3: Download the Installer</h3>
-<p>Click the download link that corresponds to your version:</p>
-<ul>
-    <li><strong>Quicken desktop download for Windows</strong></li>
-    <li><strong>Quicken desktop download Windows 10</strong></li>
-    <li><strong>Quicken classic download Windows 11</strong></li>
-    <li><strong>Quicken classic desktop download latest version</strong></li>
-</ul>
-<p>Your computer will begin the <strong>quicken.com download to new computer</strong> process automatically.</p>
+    <h3>2. Install AVG with Activation Code</h3>
+    <p>If you have purchased a subscription, you will need to <strong>install AVG with activation code</strong>:</p>
+    <ul>
+        <li>Launch the <strong>AVG application</strong>.</li>
+        <li>Select <strong>AVG.com activate</strong> or enter the <strong>AVG internet security activation code</strong>.</li>
+        <li>Follow the prompts to complete the <strong>AVG install with license key</strong>.</li>
+    </ul>
 
-<h2>4. Installing Quicken on Windows 10 or Windows 11</h2>
-<p>After the download completes, locate the setup file (usually in your Downloads folder). Double-click the file to start the installation.</p>
-<ol>
-    <li>Accept the license agreement.</li>
-    <li>Choose your destination folder.</li>
-    <li>Click <strong>Install</strong>.</li>
-</ol>
-<p>This installs the <strong>Quicken desktop download full version</strong> or <strong>Quicken classic desktop download latest version</strong> depending on your subscription.</p>
-<p>If you’re performing a <strong>reinstall Quicken Windows 10</strong> or <strong>reinstall Quicken Windows 11</strong>, the installer may detect old data files and offer to import them automatically.</p>
+    <h3>3. Install AVG with License Number</h3>
+    <p>Some users prefer to <strong>install AVG with license number</strong>. This works for both <strong>install AVG Ultimate with code</strong> and <strong>install AVG with license number</strong> for Internet Security:</p>
+    <ul>
+        <li>During installation, select “Enter license number.”</li>
+        <li>Type your <strong>license key</strong> and continue installation.</li>
+    </ul>
 
-<h2>5. Signing In and Activating Quicken</h2>
-<p>Once installed, launch Quicken. You’ll be prompted to sign in again using your Quicken ID. This step links your installation to your account and verifies your license.</p>
-<p>Use your <strong>quicken sign in my account</strong> credentials. If your purchase is not linked, you can choose <strong>quicken download already purchased transfer</strong> to move your license from another PC.</p>
-<p>After signing in, Quicken will check for the <strong>quicken download already purchased update</strong> to ensure you’re running the most recent build.</p>
+    <h2>💻 How to Install AVG on Another Computer</h2>
+    <ol>
+        <li><strong>Download my AVG subscription</strong> from your account to the new device.</li>
+        <li>Use the <strong>AVG installer</strong> to start the installation.</li>
+        <li>Enter your <strong>AVG internet security activation code</strong> or <strong>license number</strong> during setup.</li>
+        <li>Complete the installation and launch the <strong>AVG application</strong>.</li>
+    </ol>
+    <p>You can also <strong>reinstall AVG Internet Security paid version</strong> if transferring from an old computer.</p>
 
-<h2>6. Restoring or Migrating Your Data</h2>
-<p>If you’re <strong>reinstalling Quicken on new computer</strong>, you’ll want to restore your existing financial data. Use your most recent backup file (usually ending in *.QDF-backup*).</p>
-<ol>
-    <li>Open Quicken.</li>
-    <li>Go to <strong>File &gt; Restore Backup File.</strong></li>
-    <li>Select your backup from a USB drive, external disk, or cloud storage.</li>
-    <li>Click <strong>Restore</strong>.</li>
-</ol>
-<p>Your previous transactions, accounts, and preferences will reappear on your new system.</p>
+    <h2>🔄 Reinstalling AVG Internet Security or AVG Ultimate</h2>
+    <ol>
+        <li>Uninstall any existing AVG applications.</li>
+        <li><strong>Download AVG already purchased</strong> version.</li>
+        <li>Use <strong>install AVG internet security download</strong> or <strong>AVG Ultimate download paid version</strong>.</li>
+        <li>Enter your <strong>activation code</strong> or <strong>license key</strong> to <strong>install AVG with activation code</strong>.</li>
+    </ol>
 
-<h2>7. Common Issues and Troubleshooting</h2>
-<ul>
-    <li><strong>Quicken download already purchased but not showing:</strong> Verify you’re logged into the same email account used during purchase.</li>
-    <li><strong>Quicken download already purchased but not working:</strong> Clear your browser cache or try downloading from another browser.</li>
-    <li><strong>Reinstall Quicken 2022 already purchased:</strong> Log in to your account and select your 2022 version from the order history.</li>
-    <li><strong>Reinstall Quicken after subscription expired:</strong> You can still open existing data files in read-only mode.</li>
-</ul>
-<p>For any other issues, the <strong>quicken download already purchased help</strong> option within your account dashboard can connect you to support.</p>
+    <h2>📌 Key Tips for Windows Users</h2>
+    <ul>
+        <li><strong>AVG Internet Security Windows 10</strong> and <strong>AVG Internet Security 64-bit download</strong> work perfectly with modern PCs.</li>
+        <li>For Windows 11, ensure you use <strong>AVG download Windows 11</strong> or <strong>download AVG antivirus for Windows 11</strong>.</li>
+        <li>Always use official installers like <strong>AVG installer download</strong> to avoid malware.</li>
+        <li>Keep your <strong>AVG application</strong> updated after installation to maintain full protection.</li>
+    </ul>
 
-<h2>8. Updating to the Latest Version</h2>
-<p>Quicken often releases updates and enhancements. To ensure stability, always use the <strong>quicken desktop download latest version</strong> or <strong>quicken classic download latest version</strong> options.</p>
-<p>Go to <strong>Help &gt; Check for Updates</strong> within Quicken to install patches automatically.</p>
+    <h2>❓ FAQ</h2>
 
-<h2>9. Reinstalling Quicken on a New PC After System Change</h2>
-<p>If you’ve upgraded your device or operating system, such as moving from Windows 10 to 11, follow these tips for <strong>reinstall Quicken on new pc</strong>:</p>
-<ol>
-    <li>Uninstall any outdated or corrupted version.</li>
-    <li>Perform a clean <strong>quicken classic download to new computer</strong> from Quicken.com.</li>
-    <li>Reconnect your account and restore your data backup.</li>
-</ol>
+    <div class="faq">
+        <p><strong>Q1: Can I install AVG on multiple computers with the same license?</strong><br>
+        Yes, depending on your subscription. Use your <strong>AVG internet security activation code</strong> or <strong>license number</strong> to <strong>install AVG on new computer</strong>.</p>
+    </div>
 
-<h2>10. Final Tips for Smooth Installation</h2>
-<ul>
-    <li>Always back up your Quicken data before reinstalling.</li>
-    <li>Keep your Quicken ID and password secure.</li>
-    <li>Avoid using unofficial download sources.</li>
-    <li>After reinstalling, perform a <strong>quicken download already purchased update</strong> to stay current.</li>
-</ul>
+    <div class="faq">
+        <p><strong>Q2: How do I reinstall AVG Internet Security paid version?</strong><br>
+        Uninstall the old version, then <strong>download AVG already purchased</strong> and use your <strong>activation code</strong> or <strong>license key</strong> to reinstall.</p>
+    </div>
 
-<h2>Conclusion</h2>
-<p>Setting up or <strong>reinstalling Quicken on new computer</strong> doesn’t have to be difficult. Whether you’re using <strong>Quicken Classic Deluxe</strong>, <strong>Quicken Classic Desktop</strong>, or another edition, the process through <strong>quicken.com download to new computer</strong> ensures you have the official, most secure, and <strong>quicken desktop download latest version</strong> available.</p>
-<p>By following these steps, you can successfully <strong>install Quicken on this computer</strong>, restore your data, and continue managing your finances seamlessly—no matter what device you use.</p>
+    <div class="faq">
+        <p><strong>Q3: Is AVG Ultimate different from AVG Internet Security?</strong><br>
+        Yes. <strong>AVG Ultimate</strong> includes all features of Internet Security plus additional tools like a VPN, PC optimization, and privacy features.</p>
+    </div>
+
+    <div class="faq">
+        <p><strong>Q4: Can I download AVG free Internet Security?</strong><br>
+        Yes, a limited version is available for trial purposes: <strong>AVG free Internet Security download</strong>.</p>
+    </div>
+
+    <div class="faq">
+        <p><strong>Q5: How do I activate AVG after download?</strong><br>
+        Open the <strong>AVG application</strong> and follow the prompts to <strong>install AVG with activation code</strong>, <strong>install AVG with license number</strong>, or <strong>AVG.com activate</strong>.</p>
+    </div>
+
+    <h2>✅ Conclusion</h2>
+    <p>Whether you are using <strong>AVG Internet Security</strong> or <strong>AVG Ultimate</strong>, following safe download practices, proper installation steps, and entering your license or activation code ensures your system stays protected. You can <strong>install AVG on another computer</strong>, <strong>reinstall AVG Internet Security paid version</strong>, and maintain a fully licensed antivirus environment for peace of mind.</p>
+
     
   </div>
 
